--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@ body {
 }
 
 .menu {
-    border-bottom: 1px solid rgba(208, 212, 216, .5)
+    border-bottom: 1px solid rgba(208, 212, 216, .5);
 }
 
 .menu__list {
@@ -109,7 +109,7 @@ body {
 }
 
 .reason {
-    padding: 80px 0;
+    padding: 80px 0 0;
 }
 
 .reason__title {
@@ -119,4 +119,40 @@ body {
     text-align: center;
     color: #4E5665;
     margin-bottom: 22px;
+}
+
+.reason__link {
+    text-align: right;
+}
+
+.reason__link a {
+    font-weight: 700;
+    color: #ECB84C;
+    margin-bottom: 36px;
+}
+
+.reason__statistics {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+}
+
+.reason__statistics-num {
+    color: #4E5665;
+    margin-top: 32px;
+    font-weight: bold;
+    font-size: 22px;
+    line-height: 30px;
+}
+
+.reason__statistics-text {
+    color: #909090;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 17px;
+}
+
+.section-line {
+    border-bottom: 1px solid rgba(208, 212, 216, .5);
 }
