--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,19 @@ body {
     margin: 0 auto;
 }
 
+.section-line {
+    border-bottom: 1px solid rgba(208, 212, 216, .5);
+}
+
+.title {
+    font-family: Georgia;
+    font-size: 32px;
+    line-height: 38px;
+    text-align: center;
+    color: #4E5665;
+    margin-bottom: 22px;
+}
+
 .header__top {
     background-image: url('../images/top-bg.jpg');
     height: 100vh;
@@ -113,11 +126,6 @@ body {
 }
 
 .reason__title {
-    font-family: Georgia;
-    font-size: 32px;
-    line-height: 38px;
-    text-align: center;
-    color: #4E5665;
     margin-bottom: 22px;
 }
 
@@ -136,6 +144,7 @@ body {
     justify-content: space-around;
     align-items: center;
     text-align: center;
+    padding-bottom: 80px;
 }
 
 .reason__statistics-num {
@@ -153,6 +162,10 @@ body {
     line-height: 17px;
 }
 
-.section-line {
-    border-bottom: 1px solid rgba(208, 212, 216, .5);
+.about {
+    padding: 80px 0 0;
+}
+
+.about__title {
+    margin-bottom: 13px;
 }
