--- a/css/style.css
+++ b/css/style.css
@@ -175,11 +175,37 @@ body {
 
 .about__item {
     margin-bottom: 100px;
+    padding: 70px 0;
+    background-repeat: no-repeat;
+    background-position: right;
 }
 
 .about__box {
     padding: 33px 48px 18px 40px;
     background-color: #fff;
+    max-width: 470px;
+    position: relative;
+}
+
+.about__box::after,
+.about__box::before {
+    content: "";
+    position: absolute;
+    width: 33px;
+    height: 33px;
+}
+
+.about__box::before {
+    background-image: url(../images/decor-left.svg);
+    top: 19px;
+    left: 19px;
+}
+
+.about__box::after {
+    border-bottom: 2px solid #ECB84C;
+    border-right: 2px solid #ECB84C;
+    right: 19px;
+    bottom: 19px;
 }
 
 .about__box-title {
@@ -190,9 +216,18 @@ body {
     margin-bottom: 20px;
 }
 
-.about__box-text {
-    font-family: Lato;
-    font-size: 16px;
-    line-height: 28px;
-    color: #505050;
+.about__item:nth-child(even) {
+    background-position: left;
+}
+
+.about__item:nth-child(even) .about__box {
+    margin-left: auto;
+}
+
+.about__item:nth-child(even) .about__box ::before {
+    right: 19px;
+}
+
+.about__item:nth-child(even) .about__box ::after {
+    left: 19px;
 }
