--- a/css/style.css
+++ b/css/style.css
@@ -261,3 +261,29 @@ body {
     bottom: 0;
     margin: 0 auto;
 }
+
+.photo__slider {
+    max-width: 640px;
+    margin: 0 auto;
+}
+
+.slick-arrow {
+    border: none;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    background-color: #ECB84C;
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%);
+    z-index: 5;
+}
+
+.slick-prev {
+    left: -5px;
+}
+
+.slick-next {
+    right: -40px;
+}
