--- a/css/style.css
+++ b/css/style.css
@@ -276,14 +276,14 @@ body {
     cursor: pointer;
     position: absolute;
     top: 50%;
-    transform: translate(-50%);
+    transform: translateY(-50%);
     z-index: 5;
 }
 
 .slick-prev {
-    left: -5px;
+    left: -20px;
 }
 
 .slick-next {
-    right: -40px;
+    right: -20px;
 }
