--- a/css/style.css
+++ b/css/style.css
@@ -330,6 +330,43 @@ body {
     margin-bottom: 8px;
 }
 
+.footer__item-link--social {
+    padding-left: 28px;
+    position: relative;
+}
+
+.footer__item-link--social::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    width: 16px;
+    height: 16px;
+}
+
+.footer__item-link--message::before {
+    background-image: url(../images/message.svg);
+    width: 17px;
+    top: 1px;
+}
+
+.footer__item-link--facebook-logo::before {
+    background-image: url(../images/facebook-logo.svg);
+}
+
+.footer__item-link--instagram-logo::before {
+    background-image: url(../images/instagram-logo.svg);
+}
+
+.footer__item-link--youtube-logo::before {
+    background-image: url(../images/youtube-logo.svg);
+}
+
+.footer__item-link--email-logo::before {
+    background-image: url(../images/email-logo.svg);
+    height: 13px;
+    top: 2px;
+}
+
 .footer__copy {
     padding-top: 40px;
     text-align: center;
