--- a/css/style.css
+++ b/css/style.css
@@ -253,6 +253,79 @@ body {
 
 .about__images-box {
     padding-top: 73px;
+    position: relative;
+}
+
+.about__dot {
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    background-color: rgba(236, 184, 76, .75);
+    position: absolute;
+    cursor: pointer;
+}
+
+.about__dot--1 {
+    top: 190px;
+    left: 148px;
+}
+
+.about__dot--2 {
+    top: 188px;
+    left: 495px;
+}
+
+.about__dot--3 {
+    top: 147px;
+    right: 174px;
+}
+
+.about__dot--4 {
+    bottom: 28px;
+    right: 199px;
+}
+
+.about__dot::after {
+    content: "";
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: #FFD600;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.about__dot::before {
+    content: "";
+    position: absolute;
+    background-image: url(../images/line.png);
+    width: 244px;
+    height: 122px;
+    top: -113px;
+    left: 25px;
+    display: none;
+}
+
+.about__dot-text {
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 28px;
+    color: #505050;
+    position: absolute;
+    top: -140px;
+    left: 150px;
+    white-space: nowrap;
+    display: none;
+}
+
+.about__dot:hover::before {
+    display: block;
+}
+
+.about__dot:hover .about__dot-text {
+    display: block;
 }
 
 .photo {
