--- a/css/style.css
+++ b/css/style.css
@@ -466,7 +466,7 @@ body {
     display: none;
 }
 
-@media(max-width:700px) {
+@media(max-width: 700px) {
     .header__title {
         font-size: 120px;
         line-height: 150px;
@@ -474,16 +474,63 @@ body {
     .header__text {
         font-size: 20px;
     }
+    .menu {
+        position: relative;
+    }
     .menu__btn {
         display: block;
-        width: 60px;
+        width: 40px;
+        cursor: pointer;
+        position: absolute;
+        right: 40px;
+        top: 10px;
     }
     .menu__btn span {
         display: block;
         margin-bottom: 10px;
         background-color: #ECB84C;
+        height: 4px;
     }
     .menu__list {
         display: none;
+        padding-top: 60px;
+        text-align: center;
+        border-bottom: 4px solid #ECB84C;
+    }
+    .menu__list-link {
+        display: block;
+        border-bottom: 4px solid #ECB84C;
+    }
+    .menu__list-link:hover {
+        border-bottom: 4px solid transparent;
+    }
+}
+
+@media(max-width: 540px) {
+    .header__text {
+        display: none;
+    }
+    .header__top-inner {
+        border-bottom: 2px solid #ECB84C;
+    }
+    .header__top {
+        padding-top: 20px;
+    }
+    .header__title {
+        font-size: 100px;
+    }
+    .title {
+        font-size: 24px;
+        line-height: 28px;
+    }
+    body {
+        font-size: 15px;
+        line-height: 24px;
+    }
+}
+
+@media(min-width: 700px) {
+    .menu__list {
+        display: flex !important;
     }
 }
